# sery-link

./: .gitignore  BACKEND_API_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FLUENT_UX_WORKFLOW_OPTIMIZATION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  LAUNCH_SUMMARY.md  OBSIDIAN_INSPIRED_IMPROVEMENTS.md  PROJECT.md  README.md  RELEASE.md  RELEASE_CHECKLIST_v0.4.0.md  RUNBOOK.md  SECURITY.md  SHIP_READINESS.md  SIDECAR_IMPLEMENTATION.md  STARTUP_CHECKLIST.md  STRATEGIC_ROADMAP.md  SUPPORT.md  TELEMETRY.md  UX_WALKTHROUGH.md  index.html  marketplace.json  package.json  pnpm-lock.yaml  recipe-schema.json  tailwind.config.js
.github/: pull_request_template.md
.github/workflows/: release.yml  test.yml
archive/2026-04/: DELIVERABLES_SUMMARY.md  DEVELOPER_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_REFERENCE.md  IMPLEMENTATION_STATUS.md  NAVIGATION_BEFORE_AFTER.md  ROUTING_IMPLEMENTATION.md  SIDECAR_IMPLEMENTATION.md  TESTING_GUIDE.md  TESTING_v0.4.0.md  USER_GUIDE.md  UX_RESTRUCTURE_SUMMARY.md
crates/db-core/: Cargo.toml
crates/db-core/src/: agent_catalog.rs  agent_manager.rs  agent_runtime.rs  agent_service.rs  lib.rs  mysql.rs  postgres.rs  ssh_tunnel.rs  types.rs
crates/db-core/src/db/: agent_driver.rs  mod.rs
docs/internal/: ADD_REMOTE_SOURCE_AUDIT.md  FLUENT_UX_WORKFLOW_OPTIMIZATION.md  FOLDER_DETAIL_AND_CONNECT_AUDIT.md  ONBOARDING_AUDIT.md  PROJECT.md  README.md  SETTINGS_HISTORY_NOTIFICATIONS_PRIVACY_AUDIT.md  UX_PROPOSAL.md  UX_WALKTHROUGH.md
docs/scripts/: generate-dock-icon.py  generate-titlebar-icon.py  generate-tray-icon.py
examples/: test-data.csv  test-data.html  test-data.json  test-data.txt
examples/plugins/clipboard-util/: Cargo.toml  plugin.json  plugin.wasm
examples/plugins/clipboard-util/src/: lib.rs
examples/plugins/csv-parser/: Cargo.toml  README.md  plugin.json  plugin.wasm
examples/plugins/csv-parser/src/: lib.rs
examples/plugins/hello-world/: Cargo.toml  README.md  plugin.json  plugin.wasm
examples/plugins/hello-world/src/: lib.rs
examples/plugins/html-viewer/: Cargo.toml  plugin.json  plugin.wasm
examples/plugins/html-viewer/src/: lib.rs
examples/plugins/json-transformer/: Cargo.toml  plugin.json  plugin.wasm
examples/plugins/json-transformer/src/: lib.rs
examples/plugins/text-analyzer/: Cargo.toml  plugin.json  plugin.wasm
examples/plugins/text-analyzer/src/: lib.rs
examples/recipes/: csv-time-series.json  ga-funnel-analysis.json  ga-traffic-sources.json  shopify-churn-rate.json  shopify-customer-ltv.json  shopify-product-affinity.json  shopify-top-products.json  stripe-cohort-retention.json  stripe-mrr.json
scripts/: build-brand-assets.mjs  build-local.sh  bump-version.sh  check-config.sh  fetch-libpdfium.sh  fetch-pandoc.sh  gen-icons.cjs  reset-dev.sh  run-tests.sh  update-cask-sha.sh
sidecar/: README.md  build.py  markitdown_worker.py  requirements.txt  test-integration.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  test_anytomd.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/libpdfium/: README.md
src-tauri/resources/pandoc/: README.md
src-tauri/src/: agent_db_creds.rs  analytics.rs  audit.rs  auth.rs  autoscan.rs  azure_blob.rs  azure_blob_creds.rs  commands.rs  config.rs  cred_store.rs  csv.rs  db_creds.rs  db_engine.rs  deep_link.rs  disk_space.rs  driver_manager.rs  dropbox.rs  dropbox_creds.rs  dropbox_oauth.rs  duckdb_engine.rs  error.rs  events.rs  excel.rs  export_import.rs  fleet.rs  gdrive_api.rs  gdrive_cache.rs  gdrive_creds.rs  gdrive_oauth.rs  gdrive_refresh.rs  gdrive_skipped.rs  gdrive_walker.rs  history.rs  hotkey.rs  keyring_store.rs  lib.rs  machines.rs  main.rs  mcp.rs  metadata_cache.rs  (+27 more)
src-tauri/src/agent_rpc/: dispatcher.rs  mod.rs  registry.rs
src-tauri/src/agent_rpc/commands/: agent.rs  config.rs  files.rs  mod.rs  sources.rs  sql.rs  system.rs
src-tauri/src/byok/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/components/: AddMachineModal.tsx  AddRemoteSourceModal.tsx  AddSourceModal.tsx  Analytics.tsx  Ask.tsx  CatchUpDialog.tsx  CommandPalette.tsx  ConnectModal.tsx  Dashboard.tsx  DatabaseDetail.tsx  DriverStoreDialog.tsx  EditCredentialsDialog.tsx  EditS3CredentialsDialog.tsx  FileDetail.tsx  FleetView.tsx  FolderDetail.tsx  FolderDetailModal.tsx  FolderList.tsx  GdriveBrowserPanel.tsx  History.tsx  JoinFleetForm.tsx  KeyboardShortcuts.tsx  MachinesView.tsx  MarketplacePanel.tsx  Notifications.tsx  OnboardingWizard.tsx  PluginsPanel.tsx  Privacy.tsx  ReAuthModal.tsx  ReauthOneDriveDialog.tsx  RecipeExecutor.tsx  RecipePanel.tsx  Recipes.tsx  RelationshipGraph.tsx  SearchPage.tsx  Settings.tsx  SourceIcon.tsx  SourcesSidebar.tsx  StatusBar.tsx  TitleBar.tsx  (+3 more)
src/components/settings/: McpPanel.tsx  StoragePanel.tsx
src/hooks/: useAgentEvents.ts  useFeatureGate.ts  useMetadataCache.ts  useTheme.ts  useTrayEvents.ts
src/stores/: agentStore.ts
src/types/: events.ts
src/utils/: agentInvoke.ts  sources.ts  url.ts
