[package]
name = "SeryLink"
version = "0.5.0"
description = "Sery Link — connect local data to Sery.ai"
authors = ["Sery.ai <hello@sery.ai>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/seryai/sery-link"
homepage = "https://sery.ai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sery_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
duckdb = { version = "1.1", features = ["bundled"] }
notify = "6.1"
axum = "0.7"
keyring = "2.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
walkdir = "2.4"
url = "2.5"
open = "5.0"
hostname = "0.3"
urlencoding = "2.1"
dirs = "5.0"
thiserror = "1.0"
once_cell = "1.21.4"
calamine = "0.24"
glob = "0.3"
zip = "0.6"
anytomd = { version = "0.1", default-features = false }
regex = "1.10"
wasmer = { version = "7.1.0", features = ["cranelift"] }
rayon = "1.10"
num_cpus = "1.16"


[dev-dependencies]
tempfile = "3.8"
