[package]
name = "SeryLink"
version = "0.5.2"
description = "Sery Link — connect local data to Sery.ai"
authors = ["Sery.ai <hello@sery.ai>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/seryai/sery-link"
homepage = "https://sery.ai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sery_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
duckdb = { version = "1.1", features = ["bundled"] }
notify = "6.1"
axum = "0.7"
keyring = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.6", features = ["v4"] }
# PKCE dependencies for the Google Drive OAuth flow (Phase 3b of the
# cloud-connectors migration; see datalake/SETUP_GOOGLE_OAUTH.md).
# Tiny crates, all `no_std`-compatible, used only by gdrive_oauth.rs.
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# scankit wraps walkdir + size-cap + exclude-glob filtering into one
# Scanner type — see scanner.rs for the call site. The previous code
# was inline walkdir + ad-hoc filters, identical to v0.0 of scankit
# pre-extraction. walkdir comes through transitively; no need for a
# direct dep now that scanner.rs is the only consumer and watcher.rs
# uses `notify` directly (different concerns — per-folder excludes,
# tokio debouncing — that don't map cleanly to scankit's single-root
# Scanner::scan).
scankit = "0.3"
# tabkit handles "tabular file → schema + sample rows + row count" in
# one in-process call — see scanner.rs `tabkit_extract` for how it
# replaces the previous DuckDB-based extract_schema +
# extract_sample_rows pipeline. tabkit's `parquet` feature is
# enabled so we cover all four formats sery-link's extract_schema
# previously handled (xlsx, xls, csv, parquet).
tabkit = { version = "0.4", features = ["parquet"] }
url = "2.5"
open = "5.0"
hostname = "0.3"
urlencoding = "2.1"
dirs = "5.0"
thiserror = "1.0"
once_cell = "1.21.4"
calamine = "0.24"
glob = "0.3"
zip = "0.6"
anytomd = { version = "0.1", default-features = false }
# mdkit replaces the Python markitdown sidecar (179 MB → ~10 MB compiled
# in). Default features cover PDF, HTML, IPYNB, plus calamine + csv (we
# don't use those via this path — sery-link uses DuckDB for tabular —
# but disabling them isn't worth the dep churn). `pandoc` adds DOCX /
# PPTX / EPUB / RTF / ODT / LaTeX via a pandoc binary on PATH at
# runtime; falls through to anytomd when pandoc isn't available.
# `ocr-platform` enables Apple Vision (macOS) and Windows.Media.Ocr —
# zero bundle cost, gives us scanned-PDF support for free.
mdkit = { version = "0.7", features = ["pandoc", "ocr-platform"] }
regex = "1.10"
rayon = "1.10"

# MCP support — when invoked with `sery-link --mcp-stdio --root <dir>`,
# the binary becomes a stdio Model Context Protocol server exposing
# the watched folder to LLM clients (Claude Desktop, Cursor, Zed, …).
# Same Rust crate published standalone at crates.io/crates/sery-mcp;
# we consume the library surface in-process so cache + extraction
# state stays shared with the GUI half of the app.
sery-mcp = "0.4"
# rmcp gives us `ServiceExt::serve(stdio())`. The library half of
# sery-mcp doesn't re-export rmcp publicly (consumers pick which
# transport they want), so we add it directly here.
rmcp = { version = "1.5", features = ["transport-io"] }
num_cpus = "1.16"


[dev-dependencies]
tempfile = "3.8"
