[package]
name = "db-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
percent-encoding = "2"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }

# MySQL
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls", "client_ed25519", "chrono", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# SSH tunnel
russh = "0.60"
portpicker = "0.1.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
